--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     },
     "types": ["next", "next/types/global"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","global.d.ts"],
   "exclude": ["node_modules"]
 }
